--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                 </p>
             </div>
             <div class="social-medias">
-                <a href="#"><img src="img/github.png" alt="github"></a>
-                <a href="#"><img src="img/twitter.png" alt="twitter"></a>
-                <a href="#"><img src="img/linkedin.png" alt="linkedin"></a>
-                <a href="#"><img src="img/instagram.png" alt="instagram"></a>
+                <a href="https://github.com/CdeCasurpie" target="_blank"><img src="assets/github.png" alt="github"></a>
+                <a href="https://twitter.com/CasurPie" target="_blank"><img src="assets/twitter.png" alt="twitter"></a>
+                <a href="https://www.linkedin.com/in/cesar-aaron-perales-rosales-469142292" target="_blank"><img src="assets/linkedin.png" alt="linkedin"></a>
+                <a href="https://www.instagram.com/cesar_perales_20" target="_blank"><img src="assets/instagram.png" alt="instagram"></a>
             </div>
         </footer>
     </body>
